MaxiNet

MaxiNet 1.0:
 * change: Reworked MaxiNet startup architecture.
           To start MaxiNet cluster call MaxiNetFrontendServer command
           on the frontend and MaxiNetWorker on worker machines.
 * change: Config options changes. See share/MaxiNet-cfg-sample
 * change: moved MaxiNet/Frontend/tools.py to to MaxiNet/tools.py
 * bugfix: cpu logging did not terminate correctly
 * feature: Pyro 4.30 compatibility
 * feature: mininet 2.2.1rc1 compatibility
 * feature: Debian 8 compatibility
 * feature: Ubuntu 14.04 compatibility

MaxiNet 0.4:
 * cleanup: MaxiNet is now installed as a python module. Use "from MaxiNet.Frontend import maxinet" instead of old
            "import maxinet"
 * cleanup: configuration is now done in a config file instead of config.py. See MaxiNet-cfg-sample
 * cleanup: Tools class moved from maxinet.py to tools.py
 * cleanup: FatTree class moved from examples.fatTree to tools.py

MaxiNet 0.3.1:
 * bugfix: tc parameters were ignored on Tunnels if interface wasn't explicitly
           set to TCIntf
 * bugfix: first start of MaxiNet sometimes failed because tun module was not
           properly loaded
 * bugfix: running MaxiNet on one single Worker now supported
 * feature: X-forwarding for command line interface
 * feature: improved command line interface
 * feature: configuration and functionality in config.py was seperated
 * feature: config.py.sample provided instead of config.py
 * feature: scripts do not need to be installed in /usr/local/bin anymore
 * feature: installation folder of MaxiNet can be configured now
 * feature: improved debug functionality of Pyro
 * feature: improved debug functionality for worker screens
 * feature: added example for usage of openflow 1.3 with OpenVSwitch

MaxiNet 0.3:
 * bugfix: installer wont fail because of outdated repositorys
 * bugfix: paritioner wont create invalid partitions
 * bugfix: output error message if network does not support mtu of 1600